--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+
 server.port : 8081
-spring.datasource.url=jdbc:mysql://localhost:3306/mailcasting
+spring.datasource.url=jdbc:mysql://localhost:3306/mailcasting?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql = true
+hibernate.format_sql = true
+hibernate.hbm2ddl.auto = update
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.show_sql=true
+
