--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
 
 server.port : 8081
 spring.datasource.url=jdbc:mysql://localhost:3306/mailcasting?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
